Fixed jumping of account selector while expanding

--- a/_modules_diff/modules/CoreWebclient/styles/themes/NetcoreNext/styles.less
+++ b/_modules_diff/modules/CoreWebclient/styles/themes/NetcoreNext/styles.less
@@ -71,8 +71,7 @@
             }
 
             &.emails {
-                display: inline-block;
-                height: 64px;
+                height: 60px;
             }
 
             &.emails .link {
@@ -112,6 +111,7 @@
                     left: calc(@tabsbar-dropdown-left-offset + @tabsbar-dropdown-left-padding);
                     z-index: 9999;
                     padding-right: 50px;
+                    height: @tabsbar-dropdown-helper-height;
                 }
 
                 .dropdown {
